# django-df-remote-config

./: .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
df_remote_config/: admin.py  apps.py  decorators.py  defaults.py  handlers.py  models.py  schema.py  serializers.py  settings.py
df_remote_config/drf/: urls.py  views.py  viewsets.py
df_remote_config/migrations/: 0001_initial.py  0004_modernize_unique_constraint.py
examples/config_parts/: app_config.json  app_launch.json  part_auth.json
tests/: settings.py
tests/test_app/: tests.py
