[project]
name = "django-df-remote-config"
version = "0.1.0"
description = "Django DF Remote Config"
readme = "README.md"
authors = [{name = "Apexive OSS", email = "open-source@apexive.com"}]
license = { file = "LICENSE" }
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
]
requires-python = ">=3.12"
urls = { homepage = "https://apexive.com/" }

dependencies = [
    "Django>=6.0",
    "djangorestframework>=3.15.0",
    "django-df-api-drf>=1.0.0",
    "django-jsoneditor",
    "django-model-utils",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-django",
    "django-stubs[compatible-mypy]",
    "ruff>=0.9.0",
    "httpretty",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["df_remote_config*"]

[tool.ruff]
line-length = 88
fix = true
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "static",
    "migrations",
    "__pycache__",
    ".pytest_cache",
    "__init__.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "A", "B", "Q", "C", "S"]
ignore = ["B008", "E501", "S101", "A003", "B904"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disable_error_code = "attr-defined, valid-type"
disallow_untyped_defs = true
mypy_path = "df_remote_config"
exclude = "venv|migrations|build|dist|docs"
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.pytest.ini_options]
python_files = "tests.py test_*.py"
DJANGO_SETTINGS_MODULE = "tests.settings"
